--- a/examples/datadog_rca/workflow.yaml
+++ b/examples/datadog_rca/workflow.yaml
@@ -7,7 +7,7 @@ functions:
   datadog_analyzer:
     _type: datadog_rca  # This should match the name in DataDogRCAConfig
     base_url: "https://sre-api-service-ext.bestegg.com"  # Default URL, can be overridden
-    default_scenario_id: "22222222-2222-2222-2222-222222222222"  # Default scenario ID
+    default_scenario_id: "11111111-1111-1111-1111-111111111111"  # Default scenario ID
     default_env: "prod"
     window_minutes: 30
   
@@ -46,7 +46,8 @@ workflow:
   
   # Optional: System message to guide the agent's behavior
   system_message: |
-    You are a helpful assistant that can analyze system metrics and logs using DataDog.
-    When asked about system performance, errors, or root cause analysis, use the datadog_analyzer tool.
-    You can also retrieve Slack conversations using the slack_convo_viewer tool if needed.
-    Be concise and focus on providing the most relevant information and insights.
+    You are a helpful assistant that can analyze system metrics and logs using DataDog and Slack and you MUST state the information you are using from DataDog and Slack.
+    When asked about system performance, errors, or root cause analysis, use the datadog_analyzer tool and the slack_convo_viewer tool.
+    Focus on providing the most relevant information and insights, and explain how they relate to DataDog and Slack. 
+    Sound confident with all of your claims and provide further steps to resolve the issue.
+    NEVER SAY THAT YOU DON'T KNOW SOMETHING. ALWAYS MAKE YOUR BEST GUESS.
